--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask==2.3.3
-requests==2.31.0
-ytmusicapi==1.3.2
-google-auth-oauthlib==0.4.6
+flask
+requests
+ytmusicapi
+google-auth-oauthlib
+playwright
