Changing authentication server endpoints

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
 # Base URL of the authentication service
-# If running locally, use http://localhost:8080
-# If running remotely, use your deployed auth server URL
-MUSYNC_AUTH_SERVER=http://localhost:8080
-
-# Optional shared secret for auth server access
-# Leave empty if not using API key protection
-MUSYNC_API_KEY=
+# Using remote Render deployment
+MUSYNC_AUTH_SERVER=https://musync-k60r.onrender.com
 
 # Spotify OAuth credentials
 # Get these from https://developer.spotify.com/dashboard
@@ -13,11 +8,10 @@ CLIENT_ID=your_spotify_client_id_here
 CLIENT_SECRET=your_spotify_client_secret_here
 
 # Auth server public URL (used for OAuth redirects)
-# Should match where your auth server is accessible
-# For local development: http://localhost:8080
-AUTH_BASE_URL=http://localhost:8080
+# Using remote Render deployment
+AUTH_BASE_URL=https://musync-k60r.onrender.com
 
 # Google / YouTube Music OAuth config file
 # Path to the OAuth client secrets JSON file from Google Cloud Console
 # Get this from https://console.cloud.google.com/apis/credentials
-GOOGLE_OAUTH_CLIENT_FILE=client.json
+GOOGLE_OAUTH_CLIENT_FILE=credentials.json
